# Android_apps

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  settings.gradle.kts
.github/workflows/: android.yml  install-to-phone.yml  momentic.yml  release-apk.yml
apps/taskmind/: README.md  build.gradle.kts  debug.keystore
apps/taskmind-wear/: build.gradle.kts
apps/taskmind-wear/src/main/: AndroidManifest.xml
apps/taskmind-wear/src/main/res/drawable/: ic_launcher_wear.xml
apps/taskmind-wear/src/main/res/values/: strings.xml
apps/taskmind/design/handoff/: TaskMind.dc.html
apps/taskmind/docs/: AUTOMATED_TEST_PLAN.md  FUNCTIONAL_TEST_PLAN.md  GEMMA_3N_MIGRATION.md  TECHNICAL_DOCUMENTATION.md
apps/taskmind/schemas/com.rajasudhan.taskmind.data.local.TaskMindDatabase/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  5.json  6.json  7.json  8.json  9.json
apps/taskmind/src/main/: AndroidManifest.xml
apps/taskmind/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
apps/taskmind/src/main/res/values/: strings.xml  (+2 more)
apps/taskmind/src/test/resources/: robolectric.properties
e2e/: .gitignore  README.md  momentic.config.yaml  package-lock.json  package.json  smoke.test.yaml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: README.md  check_16kb_alignment.py  setup_tesseract_model.py  setup_vosk_model.py  setup_vosk_model.sh
tools/prompt_eval/: ASK_EVAL_REPORT.md  EVAL_COMPREHENSIVE.md  EVAL_REPORT.md  EVAL_dashboard.html  README.md  analyze_comprehensive.py  ask_eval.py  ask_golden.jsonl  ask_judge.wf.js  ask_judge_verdicts.jsonl  evaluate.py  gen_scenarios.wf.js  golden_set.jsonl  golden_set_ext.jsonl  judge.wf.js  validate_ext.py
tools/smoke/: .gitignore  MANUAL_CHECKLIST.md  README.md  smoke.py
(+310 files in other folders)
